# llm-assistant

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  rules.md  run_backend.py
backend/: Dockerfile  claude_integration.py  main.py  mcp_manager.py
docs/: design.md  docker-authentication-analysis.md
documents/: README.md
documents/knowledge/: README.md
documents/materials/: README.md
documents/notes/: README.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ChatInterface.css  ChatInterface.js  VoiceRecognition.css  VoiceRecognition.js
